# Nominal-Protocol

./: .gitignore  LICENSE  README.md  SECURITY.md  chain-addresses.json  litepaper.txt  package-lock.json  package.json
APTOS/: Dockerfile  Move.toml  SPECS.md  run_tests.sh
APTOS/sources/: errors.move  registry.move  structs.move  test_coin.move
APTOS/tests/: registry_tests.move  registry_tests.move.bak
EVM/: ARCHITECTURE.md  PRIMARYNAME.md  environmentCommand.txt  litepaper.txt
EVM/script/: DeployNameRegistryV1.s.sol  TestPrimaryName.s.sol
EVM/src/: NameRegistryV1.sol
EVM/test/: NameRegistryV1.t.sol  NameRegistryV1_Primary_Test.sol
NEAR/: .gitignore  Cargo.toml  Dockerfile  README.md  build_and_test.sh  docker_test.sh
NEAR/examples/: interact.sh
NEAR/src/: lib.rs
POLKADOT/: Readme.md
SOLANA/: Anchor.toml  IMPLEMENTATION_PLAN.md  build.sh
SUI/: Move.toml  PRIMARY_NAME.md  README.md  SPECS.md
SUI/sources/: errors.move  primary_name_tests.move  registry.move  structs.move
SUI/tests/: registry_tests.move  registry_tests.move.bak
SUI/tests/backup/: registry_tests.move.bak
programs/nominal-registry/: Cargo.toml
programs/nominal-registry/src/: lib.rs
tests/: nominal-registry.ts
