[package]
name = "nominal-protocol"
version = "0.1.0"
authors = ["Nominal Protocol Team"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"

# Workaround for yanked parity-secp256k1 pulled by near-crypto used in near-sdk 4.x
[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
