[package]
name = "nominal_registry"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
borsh = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
hex = "0.4"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["legacy", "unit-testing"] }

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
overflow-checks = true
