[package]
name = "nominal-registry"
version = "0.1.0"
description = "Nominal Protocol registry for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nominal_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Define optional features referenced internally by Anchor macros to avoid unexpected cfg warnings
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["default"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
